updated with supplementary figures & files outputs

--- a/biophysical_model_for_lagos_canopy-temperature_CLEANED.ipynb
+++ b/biophysical_model_for_lagos_canopy-temperature_CLEANED.ipynb
@@ -726,12 +726,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0d234e8b",
+   "metadata": {},
+   "source": [
+    "### Supplementary Outputs – Model 1 and Model 2 Predictions”"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28b6ee3f",
+   "id": "5471db54",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import rasterio\n",
+    "import numpy as np\n",
+    "import joblib\n",
+    "from rasterio.transform import from_origin\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# Load saved models\n",
+    "model1 = joblib.load(\"outputs/Model1_RF_model.joblib\")\n",
+    "model2 = joblib.load(\"outputs/Model2_RF_model.joblib\")\n",
+    "\n",
+    "# Define predictor band indices (1-based indexing for rasterio)\n",
+    "bands_model1 = [3, 4]  # NDVI, Canopy\n",
+    "bands_model2 = [3, 4, 5, 7]  # NDVI, Canopy, Built_pct, Elevation\n",
+    "\n",
+    "# Input raster stack\n",
+    "stack_path = \"Lagos_full_stack_100m.tif\"\n",
+    "\n",
+    "# Output filenames\n",
+    "output_model1 = \"outputs/Predicted_Model1_LST.tif\"\n",
+    "output_model2 = \"outputs/Predicted_Model2_LST.tif\"\n",
+    "\n",
+    "def predict_rf_to_raster(model, band_indices, input_raster, output_path):\n",
+    "    with rasterio.open(input_raster) as src:\n",
+    "        meta = src.meta.copy()\n",
+    "        width, height = src.width, src.height\n",
+    "\n",
+    "        # Read required predictor bands\n",
+    "        predictors = np.stack([src.read(band) for band in band_indices], axis=-1)\n",
+    "        predictors = predictors.reshape(-1, predictors.shape[-1])\n",
+    "\n",
+    "        # Handle NaNs or invalid values\n",
+    "        mask = np.any(np.isnan(predictors), axis=1)\n",
+    "        predictors[mask] = 0  # temporary fill\n",
+    "\n",
+    "        # Predict LST\n",
+    "        print(f\"Generating predictions for {output_path} ...\")\n",
+    "        y_pred = np.zeros(predictors.shape[0])\n",
+    "        chunk_size = 50000  # process in chunks to manage memory\n",
+    "\n",
+    "        for i in tqdm(range(0, len(predictors), chunk_size)):\n",
+    "            chunk = predictors[i:i+chunk_size]\n",
+    "            y_pred[i:i+chunk_size] = model.predict(chunk)\n",
+    "\n",
+    "        # Reshape predictions back to raster grid\n",
+    "        y_pred = y_pred.reshape((height, width))\n",
+    "\n",
+    "        # Write output raster\n",
+    "        meta.update(dtype=rasterio.float32, count=1)\n",
+    "        with rasterio.open(output_path, \"w\", **meta) as dst:\n",
+    "            dst.write(y_pred.astype(rasterio.float32), 1)\n",
+    "        print(f\"Saved: {output_path}\")\n",
+    "\n",
+    "# Run predictions\n",
+    "predict_rf_to_raster(model1, bands_model1, stack_path, output_model1)\n",
+    "predict_rf_to_raster(model2, bands_model2, stack_path, output_model2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f154746",
+   "metadata": {},
+   "source": [
+    "### Residual Maps (Figures S3–S4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1504fca2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import rasterio\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "def plot_residual_map_from_stack(full_stack_path, predicted_path, observed_band, title, filename):\n",
+    "    # Read observed LST (Band 1 = lst_l8) from full stack\n",
+    "    with rasterio.open(full_stack_path) as src:\n",
+    "        observed = src.read(observed_band).astype(float)\n",
+    "        extent = [src.bounds.left, src.bounds.right, src.bounds.bottom, src.bounds.top]\n",
+    "    \n",
+    "    # Read predicted raster (Model 1 or Model 2)\n",
+    "    with rasterio.open(predicted_path) as pred:\n",
+    "        predicted = pred.read(1).astype(float)\n",
+    "    \n",
+    "    # Compute residual (Observed - Predicted)\n",
+    "    residual = observed - predicted\n",
+    "\n",
+    "    # Mask NaNs or invalid values\n",
+    "    residual = np.where(np.isnan(residual), np.nan, residual)\n",
+    "    \n",
+    "    # Consistent color range for both maps\n",
+    "    vmin, vmax = -10, 10  # adjust range based on your data spread\n",
+    "    \n",
+    "    # Plot residual map\n",
+    "    plt.figure(figsize=(6, 5))\n",
+    "    img = plt.imshow(residual, cmap=\"RdBu_r\", extent=extent, vmin=vmin, vmax=vmax)\n",
+    "    plt.colorbar(img, label=\"Residual (Observed - Predicted, °C)\")\n",
+    "    plt.title(title)\n",
+    "    plt.xlabel(\"Longitude\")\n",
+    "    plt.ylabel(\"Latitude\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(filename, dpi=300, bbox_inches=\"tight\")\n",
+    "    plt.close()\n",
+    "    print(f\"Saved: {filename}\")\n",
+    "\n",
+    "# Run for Model 1 and Model 2\n",
+    "plot_residual_map_from_stack(\n",
+    "    full_stack_path=\"Lagos_full_stack_100m.tif\",\n",
+    "    predicted_path=\"outputs/Predicted_Model1_LST.tif\",\n",
+    "    observed_band=1,  # lst_l8\n",
+    "    title=\"Residual Map - Model 1\",\n",
+    "    filename=\"outputs/Figure_S3_Residual_Model1.png\"\n",
+    ")\n",
+    "\n",
+    "plot_residual_map_from_stack(\n",
+    "    full_stack_path=\"Lagos_full_stack_100m.tif\",\n",
+    "    predicted_path=\"outputs/Predicted_Model2_LST.tif\",\n",
+    "    observed_band=1,  # lst_l8\n",
+    "    title=\"Residual Map - Model 2\",\n",
+    "    filename=\"outputs/Figure_S4_Residual_Model2.png\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43a77639",
+   "metadata": {},
+   "source": [
+    "### Correlation Matrix (File S2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ff26f02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming df is your dataframe with predictor columns\n",
+    "corr_matrix = df.corr()  # Compute correlation\n",
+    "corr_matrix.to_csv(\"outputs/File_S2_CorrelationMatrix.csv\", index=True)\n"
+   ]
   }
  ],
  "metadata": {
